<resources>
    <string name="app_name">FitFusionApp</string>
    <string name="txtRecPassword">Recuperar Contraseña</string>
    <string name="imgLogoDesc">Logotipo del creador del contenido</string>
    <string name="msg_click_boton">Vamos allá</string>
    <string name="txtUser">Usuario</string>
    <string name="txt_contraseña">*</string>
    <string name="nombrePerfil">Perfil Usuario</string>
    <string name="nombreOpcionMenus">Menús</string>
    <string name="frase_menu">Hoy es tu día...</string>
    <string name="frase_tiempo">¿Vemos qué día hace hoy?</string>
    <string name="frase_menus">Lo mejor está por venir...</string>

    <!-- BOTONES -->

    <string name="btnMiActividad">Mi Actividad</string>
    <string name="btnIniciarSesion">Iniciar Sesión</string>
    <string name="btnRegistro">Darse de Alta</string>
    <string name="btnEmail">Correo Electrónico</string>
    <string name="btnPassword">Contraseña</string>
    <string name="btnIr">Entrar</string>
    <string name="btnEntrenamiento">Entrenamiento</string>
    <string name="btnClases">Clases</string>
    <string name="btnDatosFisicos">Datos Físicos</string>
    <string name="btnNutricion">Nutrición</string>
    <string name="btnMenus">Menús</string>
    <string name="btnRecetario">Recetario</string>
    <string name="btnListaCompra">Lista de la Compra</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="obtener_tiempo">obtener Tiempo</string>


    <!-- Lista de meses -->
    <string-array name="lista_meses">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>

    <!-- Lista de semanas (puedes adaptarlas según el mes) -->
    <string-array name="lista_semanas">
        <item>Semana 1</item>
        <item>Semana 2</item>
        <item>Semana 3</item>
        <item>Semana 4</item>
    </string-array>

</resources>