<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MenuPrincipal">

    <Button
        android:id="@+id/btnClases"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/btnClases"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ListaCompra" />

    <Button
        android:id="@+id/btn_menus"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/btnDatosFisicos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClases" />

    <Button
        android:id="@+id/btnRecetario"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/btnNutricion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_menus" />

    <Button
        android:id="@+id/btn_ListaCompra"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/btnListaCompra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="142dp"
        android:layout_height="143dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="108dp"
        android:layout_marginBottom="27dp"
        android:src="@drawable/rostro_mujer"
        app:layout_constraintBottom_toTopOf="@+id/tv_nombre_usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/rostro_mujer" />

    <Button
        android:id="@+id/button6"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="137dp"
        android:text="@string/btnMiActividad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/tv_nombre_usuario"
        android:layout_width="173dp"
        android:layout_height="31dp"
        android:layout_marginStart="119dp"
        android:layout_marginTop="27dp"
        android:text="@string/nombrePerfil"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

</androidx.constraintlayout.widget.ConstraintLayout>