<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.MainActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="222dp"
        android:layout_height="48dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="35dp"
        android:text="@string/btnRegistro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Inicio_Sesion" />

    <Button
        android:id="@+id/btn_Inicio_Sesion"
        android:layout_width="222dp"
        android:layout_height="48dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="108dp"
        android:text="@string/btnIniciarSesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="189dp"
        android:layout_height="186dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="180dp"
        android:src="@drawable/blanco"
        android:contentDescription="@string/imgLogoDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/blanco" />



</androidx.constraintlayout.widget.ConstraintLayout>