<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_menus"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="441dp"
        android:layout_marginEnd="40dp"
        android:text="@string/btnMenus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRecetario"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="40dp"
        android:text="@string/btnRecetario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_menus" />

    <Button
        android:id="@+id/btn_ListaCompra"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="40dp"
        android:text="@string/btnListaCompra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRecetario" />


</androidx.constraintlayout.widget.ConstraintLayout>